load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")

###############################################################################
# Rust Binary
###############################################################################

rust_binary(
    name = "api_server",
    srcs = ["main.rs"],
    deps = [
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
    visibility = ["//visibility:public"],
)

###############################################################################
# OCI Image Layer
###############################################################################

pkg_tar(
    name = "api_server_layer",
    srcs = [":api_server"],
    package_dir = "/app",
    mode = "0755",
)

###############################################################################
# OCI Images (platform-specific)
###############################################################################

oci_image(
    name = "image_amd64",
    base = "@distroless_static_linux_amd64",
    tars = [":api_server_layer"],
    entrypoint = ["/app/api_server"],
    exposed_ports = ["8080/tcp"],
    labels = {
        "org.opencontainers.image.title": "api-server",
        "org.opencontainers.image.description": "Rust Axum API Server",
    },
)

oci_image(
    name = "image_arm64",
    base = "@distroless_static_linux_arm64_v8",
    tars = [":api_server_layer"],
    entrypoint = ["/app/api_server"],
    exposed_ports = ["8080/tcp"],
    labels = {
        "org.opencontainers.image.title": "api-server",
        "org.opencontainers.image.description": "Rust Axum API Server",
    },
)

###############################################################################
# Multi-architecture Image Index
###############################################################################

oci_image_index(
    name = "image",
    images = [
        ":image_amd64",
        ":image_arm64",
    ],
    visibility = ["//visibility:public"],
)

###############################################################################
# Local Docker Load (for testing)
###############################################################################

oci_load(
    name = "load",
    image = select({
        "@platforms//cpu:arm64": ":image_arm64",
        "@platforms//cpu:x86_64": ":image_amd64",
        "//conditions:default": ":image_amd64",
    }),
    repo_tags = ["api-server:latest"],
)

###############################################################################
# Push to Registry
###############################################################################

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/wonop-io/helloworld/api-server",
    remote_tags = ["latest"],
)
