load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")

###############################################################################
# Rust Binary (cross-compiled to Linux)
###############################################################################

rust_binary(
    name = "server",
    srcs = ["main.rs"],
    deps = [
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
        "@crates//:reqwest",
        "@crates//:log",
        "@crates//:env_logger",
        "@crates//:colored",
        "@crates//:dotenv",
        "@crates//:serde",
        "@crates//:serde_json",
        "//api/types:api_types",
    ],
    visibility = ["//visibility:public"],
)

###############################################################################
# OCI Image Layer
###############################################################################

pkg_tar(
    name = "server_layer",
    srcs = [":server"],
    package_dir = "/app",
    mode = "0755",
)

###############################################################################
# OCI Images (platform-specific, using distroless/static for static binaries)
###############################################################################

oci_image(
    name = "image_amd64",
    base = "@distroless_static_linux_amd64",
    tars = [":server_layer"],
    entrypoint = ["/app/server"],
    exposed_ports = ["8000/tcp"],
    labels = {
        "org.opencontainers.image.title": "backend-server",
        "org.opencontainers.image.description": "Rust Axum Backend Server",
    },
)

oci_image(
    name = "image_arm64",
    base = "@distroless_static_linux_arm64_v8",
    tars = [":server_layer"],
    entrypoint = ["/app/server"],
    exposed_ports = ["8000/tcp"],
    labels = {
        "org.opencontainers.image.title": "backend-server",
        "org.opencontainers.image.description": "Rust Axum Backend Server",
    },
)

###############################################################################
# Multi-architecture Image Index
###############################################################################

oci_image_index(
    name = "image",
    images = [
        ":image_amd64",
        ":image_arm64",
    ],
    visibility = ["//visibility:public"],
)

###############################################################################
# Local Docker Load (for testing)
###############################################################################

oci_load(
    name = "load",
    image = select({
        "@platforms//cpu:arm64": ":image_arm64",
        "@platforms//cpu:x86_64": ":image_amd64",
        "//conditions:default": ":image_amd64",
    }),
    repo_tags = ["backend-server:latest"],
)

###############################################################################
# Push to Registry
###############################################################################

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/wonop-io/helloworld/backend",
    remote_tags = ["latest"],
)
