###############################################################################
# Bazel module configuration for api-server (Rust/Axum)
# Builds OCI images using rules_oci
###############################################################################

module(
    name = "api_server",
    version = "0.1.0",
)

# Rust rules
bazel_dep(name = "rules_rust", version = "0.69.0")

# OCI container rules
bazel_dep(name = "rules_oci", version = "2.2.0")

# Packaging rules (for creating tarballs)
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Register Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Pull base images for OCI
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    # Multi-platform manifest list digest for cc-debian12:latest
    # Contains: linux/amd64, linux/arm64/v8, linux/arm/v7, linux/s390x, linux/ppc64le
    digest = "sha256:329e54034ce498f9c6b345044e8f530c6691f99e94a92446f68c0adf9baa8464",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",  # arm64 requires v8 variant
    ],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64", "distroless_cc_linux_arm64_v8")

# Crate dependencies via crate_universe
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "tokio",
    version = "1.41",
    features = ["full"],
)
crate.spec(
    package = "axum",
    version = "0.7",
)
crate.spec(
    package = "serde",
    version = "1.0",
    features = ["derive"],
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    package = "tracing-subscriber",
    version = "0.3",
    features = ["env-filter"],
)
crate.from_specs()
use_repo(crate, "crates")
