###############################################################################
# Bazel module configuration for backend server (Rust/Axum)
# Builds OCI images using rules_oci with cross-compilation support
###############################################################################

module(
    name = "backend_server",
    version = "0.1.0",
)

# Platform definitions (needed for select() in oci_load)
bazel_dep(name = "platforms", version = "0.0.11")

# Rust rules
bazel_dep(name = "rules_rust", version = "0.69.0")

# OCI container rules
bazel_dep(name = "rules_oci", version = "2.2.0")

# Packaging rules (for creating tarballs)
bazel_dep(name = "rules_pkg", version = "1.0.1")

# MUSL toolchain for cross-compilation to Linux
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)

# Register Rust toolchain with Linux target triples for cross-compilation
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
    extra_target_triples = [
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Pull base images for OCI (using Alpine which is musl-based)
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine",
    # Multi-platform manifest list digest for alpine:3.19
    digest = "sha256:a8cbb8c69ee71561f4b69c066bad07f7e510caaa523da26fbfc606b10bd7934b",
    image = "index.docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "alpine", "alpine_linux_amd64", "alpine_linux_arm64")

# Crate dependencies via crate_universe
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Core server dependencies
crate.spec(
    package = "tokio",
    version = "1.36",
    features = ["full"],
)
crate.spec(
    package = "axum",
    version = "0.7",
    features = ["tokio"],
)
crate.spec(
    package = "tower-http",
    version = "0.5",
    features = ["cors"],
)
crate.spec(
    package = "reqwest",
    version = "0.12",
    default_features = False,
    features = ["json", "rustls-tls"],
)

# Logging
crate.spec(
    package = "log",
    version = "0.4",
)
crate.spec(
    package = "env_logger",
    version = "0.11",
)
crate.spec(
    package = "colored",
    version = "3.0",
)

# Environment
crate.spec(
    package = "dotenv",
    version = "0.15",
)

# Serialization
crate.spec(
    package = "serde",
    version = "1.0",
    features = ["derive"],
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)

# Utilities (for api_types compatibility)
crate.spec(
    package = "chrono",
    version = "0.4",
    features = ["serde"],
)
crate.spec(
    package = "validator",
    version = "0.18",
    features = ["derive"],
)
crate.spec(
    package = "uuid",
    version = "1.3",
    features = ["serde", "v4"],
)

crate.from_specs()
use_repo(crate, "crates")
